kubernetes/infrastructure/bff-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-svc
  labels:
    app: bff-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff-svc
  template:
    metadata:
      name: bff-svc
      labels:
        app: bff-svc
    spec:
      containers:
        - name: bff-svc
          image: bff-svc:latest
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: bff-clusterip
spec:
  type: ClusterIP
  selector:
    app: bff-svc
  ports:
    - port: 8080
      targetPort: 8080
