kubernetes/infrastructure/healthrc-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthrc-svc
  labels:
    app: healthrc-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: healthrc-svc
  template:
    metadata:
      name: healthrc-svc
      labels:
        app: healthrc-svc
    spec:
      containers:
        - name: healthrc-svc
          image: healthrc-svc:latest
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: healthrc-clusterip
spec:
  type: ClusterIP
  selector:
    app: healthrc-svc
  ports:
    - port: 8080
      targetPort: 8080
